48088/Sintactica.output
Terminals which are not used

   BOOLEANEXPRESION
   IDENT
   NUM


Grammar

    0 $accept: Assertion $end

    1 Assertion: HELP NL
    2          | EXIT NL

    3 HELP: HELP PCOMA ASSERTIONCLAUSE
    4     | ASSERTIONCLAUSE

    5 ASSERTIONCLAUSE: UNLABELEDASSERTIONCLAUSE
    6                | TANGMARK UNLABELEDASSERTIONCLAUSE

    7 UNLABELEDASSERTIONCLAUSE: BOOLEANO
    8                         | COMENTARIO

    9 TANGMARK: TAG DP

   10 TAG: IDE


Terminals, with rules where they appear

$end (0) 0
error (256)
COMENTARIO (258) 8
BOOLEANO (259) 7
IDE (260) 10
NL (261) 1 2
BOOLEANEXPRESION (262)
PCOMA (263) 3
DP (264) 9
IDENT (265)
NUM (266)
EXIT (267) 2


Nonterminals, with rules where they appear

$accept (13)
    on left: 0
Assertion (14)
    on left: 1 2, on right: 0
HELP (15)
    on left: 3 4, on right: 1 3
ASSERTIONCLAUSE (16)
    on left: 5 6, on right: 3 4
UNLABELEDASSERTIONCLAUSE (17)
    on left: 7 8, on right: 5 6
TANGMARK (18)
    on left: 9, on right: 6
TAG (19)
    on left: 10, on right: 9


state 0

    0 $accept: . Assertion $end

    COMENTARIO  shift, and go to state 1
    BOOLEANO    shift, and go to state 2
    IDE         shift, and go to state 3
    EXIT        shift, and go to state 4

    Assertion                 go to state 5
    HELP                      go to state 6
    ASSERTIONCLAUSE           go to state 7
    UNLABELEDASSERTIONCLAUSE  go to state 8
    TANGMARK                  go to state 9
    TAG                       go to state 10


state 1

    8 UNLABELEDASSERTIONCLAUSE: COMENTARIO .

    $default  reduce using rule 8 (UNLABELEDASSERTIONCLAUSE)


state 2

    7 UNLABELEDASSERTIONCLAUSE: BOOLEANO .

    $default  reduce using rule 7 (UNLABELEDASSERTIONCLAUSE)


state 3

   10 TAG: IDE .

    $default  reduce using rule 10 (TAG)


state 4

    2 Assertion: EXIT . NL

    NL  shift, and go to state 11


state 5

    0 $accept: Assertion . $end

    $end  shift, and go to state 12


state 6

    1 Assertion: HELP . NL
    3 HELP: HELP . PCOMA ASSERTIONCLAUSE

    NL     shift, and go to state 13
    PCOMA  shift, and go to state 14


state 7

    4 HELP: ASSERTIONCLAUSE .

    $default  reduce using rule 4 (HELP)


state 8

    5 ASSERTIONCLAUSE: UNLABELEDASSERTIONCLAUSE .

    $default  reduce using rule 5 (ASSERTIONCLAUSE)


state 9

    6 ASSERTIONCLAUSE: TANGMARK . UNLABELEDASSERTIONCLAUSE

    COMENTARIO  shift, and go to state 1
    BOOLEANO    shift, and go to state 2

    UNLABELEDASSERTIONCLAUSE  go to state 15


state 10

    9 TANGMARK: TAG . DP

    DP  shift, and go to state 16


state 11

    2 Assertion: EXIT NL .

    $default  reduce using rule 2 (Assertion)


state 12

    0 $accept: Assertion $end .

    $default  accept


state 13

    1 Assertion: HELP NL .

    $default  reduce using rule 1 (Assertion)


state 14

    3 HELP: HELP PCOMA . ASSERTIONCLAUSE

    COMENTARIO  shift, and go to state 1
    BOOLEANO    shift, and go to state 2
    IDE         shift, and go to state 3

    ASSERTIONCLAUSE           go to state 17
    UNLABELEDASSERTIONCLAUSE  go to state 8
    TANGMARK                  go to state 9
    TAG                       go to state 10


state 15

    6 ASSERTIONCLAUSE: TANGMARK UNLABELEDASSERTIONCLAUSE .

    $default  reduce using rule 6 (ASSERTIONCLAUSE)


state 16

    9 TANGMARK: TAG DP .

    $default  reduce using rule 9 (TANGMARK)


state 17

    3 HELP: HELP PCOMA ASSERTIONCLAUSE .

    $default  reduce using rule 3 (HELP)
